--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<p>Hello World!</p>
+<p>Welcome to YouSpot!</p>
 </body>
-<script src="popup.js"></script>
 </html>
